Fix: dropdown arrow on Find toolbar not contrasty enough

--- a/bundles/org.eclipse.orion.client.ui/web/css/theme.css
+++ b/bundles/org.eclipse.orion.client.ui/web/css/theme.css
@@ -331,6 +331,7 @@ a.currentLocation:hover {
 	display: inline-block;
 	vertical-align: top;
 	line-height: 12px;
+	color: silver;
 }
 
 .dropdownArrowRight {
